--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,10 @@
 
 :root {
   --cor-bg-cinza: #fafafa;
-  --cor-letras-preto: #333;
-  --cor-box-cinza: #c6c6c6;
+  --cor-links-menu: rgba(25, 23, 17, 0.6);
+  --cor-box-cinza: #d6d7d7;
   --cor-letra-cinza: #f1f1f1;
+  --cor-letra-preta: #333;
 }
 
 /*Declarando a ocupação das linhas*/
@@ -36,9 +37,24 @@ body {
   -moz-grid-template-rows: auto 100vh auto;
 }
 
+/*Edições da flex*/
+.flex {
+  display: flex;
+  flex-direction:column;
+}
+
+.end {
+  align-items: flex-end;
+}
+
+.container {
+  width: 90%;
+
+}
 
 
 /*Dizendo aos elementos aonde eles devem ficar*/
+
 
 .main-header {
   grid-area: header;
@@ -50,34 +66,47 @@ body {
   height: 90vh;
   display: block;
   position: fixed;
-  width: 30%;
+  width: 15em;
   max-width: 100%;
   background-color: var(--cor-bg-cinza);
-  box-shadow: 1px 4px 4px var(--cor-box-cinza);
+  box-shadow: 1px 3px 3px var(--cor-box-cinza);
   border-bottom-right-radius: 3px;
+  overflow-y: auto;
 }
+
+
 
 main {
   grid-area: main;
 }
+
 
 footer {
   grid-area:footer;
   height: 4em;
   background-color: var(--cor-letra-cinza);
 }
+/*Tipografia*/
+section > h2 {
+  font-size: 2.5em;
+}
+
+section > :-webkit-any(p, h2) {
+  color: var(--cor-letra-preta);
+}
+
 
 /* Edição do side-nav*/
 
 nav.side-nav {
-  display: flex;
-  flex-direction:column;
+
 }
 
 .side-nav a {
   text-decoration: none;
-  color: var(--cor-letras-preto);
+  color: var(--cor-links-menu);
   padding: .5em;
+  font-size: 1em;
 
 }
 
@@ -86,6 +115,32 @@ nav.side-nav {
 }
 
 .side-nav a:focus-within {
-  background: #c4c4c4;
+  background: #eaebeb;
+  color: var(--cor-letra-preta);
+  font-weight: bolder;
 }
 
+/*Estilizando o Scroll do sidebar*/
+.sidebar::-webkit-scrollbar-thumb {
+    background: var(--cor-box-cinza);
+}
+
+
+
+.sidebar::-webkit-scrollbar {
+    width: 10px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+  border: 1px solid var(--cor-letra-cinza);
+    border-radius: 10px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    }
+
+/*checkbox*/
+input[type="checkbox"]:checked {
+  color:red;
+}
