Atualizando web layout

--- a/web/src/styles/normalize.css
+++ b/web/src/styles/normalize.css
@@ -1,4 +1,5 @@
- 
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600&family=Roboto:wght@300;700&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,7 +26,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  background: #fcfcfc;
 }
 ol, ul {
 	list-style: none;
@@ -70,6 +74,7 @@ font-size: 1em; /* 2 */
 
 a {
 background-color: transparent;
+text-decoration: none;
 }
 
 abbr[title] {
